# nukki

./: .gitignore  README.md  pyproject.toml
src/nukki/: cli.py  core.py  remover.py
tests/: test_core.py
